...
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:padding="0px">


            <Button
                android:id="@+id/MNB_BUTTON"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:backgroundTint="@color/eu_darkest_blue"
...
